CORE-34661: Fixed spacing issue on pudo order confirmation page.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-confirmation-pudo-aramex/component/_pudo-order-confirmation.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-confirmation-pudo-aramex/component/_pudo-order-confirmation.scss
@@ -58,7 +58,7 @@
       }
 
       @include breakpoint($tablet) {
-        margin-top: 0.75rem !important;
+        margin: 0.75rem 0 !important;
       }
     }
   }
